<resources>
    <string name="app_name">Enigma 2048</string>
    <string name="title_leaderboards">Leaderboards</string>
    <string name="play">Play</string>
    <string name="title_about">About</string>

    <string name="lb_description">Leaderboards representing personal and global high scores</string>
    <string name="lb_personal">Personal</string>
    <string name="lb_global">Global</string>

    <string name="settings_button">Settings</string>

    <string name="continue_button">Continue</string>
    <string name="new_game_button">New Game</string>

    <string name="about_game">This game is popularly known as 2048. The goal is to combine tiles with the same number to create a tile with a higher number. The game ends when the board is full and no more moves can be made.</string>
    <string name="about_project">We developed this game as a project for our Mobile Application Development course. Java was prominently used for the development of the game. The UI is based on the modern Material You theming engine by google.</string>
    <string name="about_team">Our team consists of 3 members. We are from B9 batch of CSE 21.\n\n1. Shreyansh Nayak (211B307)\n2. Vaishali Srivastava (211B337)\n3. Urshita Motwani (211B334)</string>
</resources>